[package]
name = "rsync_io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Socket and pipe I/O utilities for the Rust rsync implementation (mirrors upstream io.c)"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = { workspace = true }
protocol = { path = "../protocol" }
logging = { path = "../logging" }
memchr = { workspace = true }
shell-words = "1.1"
russh = { workspace = true, optional = true }
url = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }
is-terminal = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["ssh-config-parse"]
embedded-ssh = ["dep:russh", "dep:url", "dep:rpassword", "dep:is-terminal", "dep:tokio"]
# Async SSH transport: opt-in tokio-process backing for `SshConnection`.
# See `docs/design/async-ssh-transport.md` (#1593) for the staging plan.
async-ssh = ["dep:tokio"]
# ssh-config-parse:
#   what:    Extends `SshCommand::has_ssh_compression` to consult
#            `~/.ssh/config` and `/etc/ssh/ssh_config` for `Compression yes`
#            at top level or under `Host *`, closing the SSC-3 gap where a
#            user-configured default would silently double-compress when
#            paired with rsync's `--compress`.
#   why:     SSC-1 (argv warning) misses the case where the user sets
#            `Compression yes` globally in ssh_config and never passes `-C`
#            on the rsync command line.
#   scope:   Top-level and `Host *` directives only. Per-host `Host foo`
#            blocks and `Match` blocks are deferred because they need
#            runtime context the warning site does not have.
#   safety:  Pure Rust, no extra dependencies, no unsafe code.
#   opt out: `cargo build -p rsync_io --no-default-features` (then re-add
#            any other features you need). Without this feature the
#            argv-only SSC-1 detection path remains in place.
ssh-config-parse = []
# Opt-in: exposes the standalone `socketpair_stderr` primitive
# (SSE-3, #2372) and, when paired with `async-ssh`, the SSE-4 async
# drain task (#2373) that funnels stderr into a bounded ring buffer
# via `tracing::warn!`. Off by default. The production
# `SshCommand::spawn` path is unchanged by this flag - it already
# wires stderr through `aux_channel::configure_stderr_channel` on
# every supported target, with `Stdio::piped()` as the cross-platform
# fallback. `tests/ssh_stderr_default_path.rs` guards that public
# contract (`wait_with_stderr` surfaces stderr) when the feature is off.
# See `docs/design/socketpair-stderr-channel.md` for the staging plan.
ssh-socketpair-stderr = ["dep:tracing"]

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros", "net", "io-util"] }
criterion = { workspace = true }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "ssh_cipher"
harness = false

[[bench]]
name = "ssh_sync_vs_async"
harness = false

[[bench]]
name = "concurrent_session_scaling"
harness = false
