[package]
name = "transfer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Server-side transfer engine for the Rust rsync implementation"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
protocol = { path = "../protocol" }
metadata = { path = "../metadata", default-features = false }
engine = { path = "../engine", default-features = false }
signature = { path = "../signature" }
filters = { path = "../filters" }
compress = { path = "../compress" }
logging = { path = "../logging" }
fast_io = { path = "../fast_io", default-features = false, features = ["mmap"] }
thiserror = "2.0"
tracing = { workspace = true, optional = true }
rayon = { workspace = true }

[target.'cfg(unix)'.dependencies]
checksums = { path = "../checksums" }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }

[target.'cfg(unix)'.dependencies.metadata]
path = "../metadata"
default-features = false
features = ["xattr"]

[target.'cfg(unix)'.dependencies.engine]
path = "../engine"
default-features = false
features = ["xattr"]

[features]
default = ["zstd", "lz4", "acl", "xattr", "mmap", "incremental-flist"]

# ============================================================================
# Compression Features
# ============================================================================
zstd = ["engine/zstd", "compress/zstd"]
lz4 = ["engine/lz4", "compress/lz4"]

# ============================================================================
# Metadata Features
# ============================================================================
acl = ["metadata/acl", "engine/acl"]
xattr = []

# ============================================================================
# I/O Optimization Features
# ============================================================================

# Memory-mapped I/O for efficient file reading
# Benefits: Zero-copy file access, better cache utilization
mmap = ["fast_io/mmap"]

# io_uring support for Linux 5.6+ with automatic fallback
# Benefits: Batched async I/O for 20-40% better throughput
io_uring = ["fast_io/io_uring"]

# ============================================================================
# Protocol Features
# ============================================================================

# Incremental file list processing with failed directory tracking
incremental-flist = []

# ============================================================================
# Debugging Features
# ============================================================================

# Structured logging instrumentation
tracing = ["dep:tracing"]

[dev-dependencies]
tempfile = "3.15"
criterion = "0.5"

[[bench]]
name = "map_file_benchmark"
harness = false

[[bench]]
name = "token_buffer_benchmark"
harness = false
