[package]
name = "transfer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Server-side transfer engine for the Rust rsync implementation"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
protocol = { path = "../protocol" }
metadata = { path = "../metadata", default-features = false }
engine = { path = "../engine", default-features = false }
signature = { path = "../signature" }
filters = { path = "../filters" }
compress = { path = "../compress" }
logging = { path = "../logging" }
fast_io = { path = "../fast_io", default-features = false }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
filetime = { workspace = true }
getrandom = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
rayon = { workspace = true }
# socket2 is used by `writer::server::shutdown_send_side` to drive the
# explicit SO_LINGER + half-close drain barrier after the daemon-sender's
# generator orchestrator returns (UTS-V3.A audit).
socket2 = { workspace = true, features = ["all"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-fs = { path = "../apple-fs" }

[target.'cfg(unix)'.dependencies]
checksums = { path = "../checksums" }
# libc is needed for O_NOATIME (Linux source-file open, upstream syscall.c:228,687)
# and for openat flag constants (O_WRONLY/O_CREAT/O_EXCL/O_NOFOLLOW) used by the
# SEC-1.r temp-file sandbox in temp_guard.rs.
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }

[target.'cfg(unix)'.dependencies.metadata]
path = "../metadata"
default-features = false
features = ["xattr"]

[target.'cfg(unix)'.dependencies.engine]
path = "../engine"
default-features = false
features = ["xattr"]

[features]
default = ["zstd", "lz4", "xattr", "incremental-flist"]

# ============================================================================
# Compression Features
# ============================================================================
zstd = ["engine/zstd", "compress/zstd", "protocol/zstd"]
lz4 = ["engine/lz4", "compress/lz4", "protocol/lz4"]
zlib-ng = ["engine/zlib-ng", "compress/zlib-ng", "protocol/zlib-ng"]

# ============================================================================
# Metadata Features
# ============================================================================
acl = ["metadata/acl", "engine/acl"]
xattr = []

# ============================================================================
# Filename Encoding (iconv)
# ============================================================================

# Mirrors the upstream `#ifdef ICONV_OPTION` build-time switch in compat.c.
# When enabled, the capability builder advertises CF_SYMLINK_ICONV ('s') and
# the file-list reader/writer apply iconv conversion to symlink targets in
# addition to filenames. Without this feature the negotiation skips 's' so
# the peer does not run sender_symlink_iconv on our wire output.
iconv = ["protocol/iconv"]

# ============================================================================
# I/O Optimization Features
# ============================================================================

# io_uring support for Linux 5.6+ with automatic fallback
# Benefits: Batched async I/O for 20-40% better throughput
io_uring = ["fast_io/io_uring"]

# IOCP (I/O Completion Ports) for Windows with automatic fallback
# Benefits: Overlapped async file I/O via kernel completion ports
iocp = ["fast_io/iocp"]

# vmsplice zero-copy disk writer for already-demuxed literal chunks
# (Linux-only). Selected by the disk-commit thread when io_uring/IOCP are not
# in play and the chunk is large + page-aligned; otherwise falls back to the
# buffered writer. Default off until benchmarks justify promotion. See
# docs/design/splice-vmsplice-zero-copy.md.
vmsplice = ["fast_io/vmsplice"]

# dontcache uncached bulk disk writer (Linux 6.14+). Selected by the
# disk-commit thread when io_uring/IOCP are not in play and the write is
# non-sparse/non-append; lands chunks via pwritev2(RWF_DONTCACHE) so large
# transfers do not evict the page-cache working set, with a per-file buffered
# fallback. Default off until eviction/throughput benchmarks justify promotion.
dontcache = ["fast_io/dontcache"]

# macOS Grand Central Dispatch (`dispatch_io`) async disk-commit writer
# (macOS-only). Selected by the disk-commit thread in preference to the
# F_NOCACHE + writev macOS writer when io_uring/IOCP are not in play and the
# write is non-sparse/non-append; sparse/append fall back to the buffered
# writer. Byte content and fsync semantics match the buffered path. Default
# off until benchmarks justify promotion. Forwards to `fast_io/macos-gcd`.
macos-gcd = ["fast_io/macos-gcd"]


# Per-thread slab pool for buffer returns - forwards to the engine crate.
# Forwarded so `--all-features` enables it transitively on engine *and* exposes
# it as a transfer-side cfg gate; cross-crate tests that observe central-pool
# counters can opt themselves out when the slab is in play.
thread-slab-pool = ["engine/thread-slab-pool"]

# ============================================================================
# Protocol Features
# ============================================================================

# Incremental file list processing with failed directory tracking
incremental-flist = []

# DEPRECATED (ISI.h): sender INC_RECURSE is now default-on. Marker
# retained for one release to keep V61D-2 / V61D-3 interop gates
# compilable until ISI.i.2 retires both.
sender-inc-recurse = []

# ============================================================================
# Debugging Features
# ============================================================================

# Structured logging instrumentation
tracing = ["dep:tracing"]

[dev-dependencies]
tempfile = { workspace = true }
filetime = { workspace = true }
test-support = { path = "../test-support" }
rustix = { workspace = true, features = ["process"] }
platform = { path = "../platform" }
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
crossbeam-channel = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
filetime = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
# Sender-side fake-super xattr consumer tests place `user.rsync.%stat`
# directly on the source placeholder file.
xattr = { workspace = true }

[[bench]]
name = "map_file_benchmark"
harness = false

[[bench]]
name = "token_buffer_benchmark"
harness = false

[[bench]]
name = "reorder_buffer_benchmark"
harness = false

[[bench]]
name = "reorder_buffer_large_scale"
harness = false

[[bench]]
name = "parallel_stat_collector_contention"
harness = false

[[bench]]
name = "par_bridge_vs_deque"
harness = false

[[bench]]
name = "sync_channel_overhead"
harness = false

[[bench]]
name = "isi_g_sender_inc_recurse_start_time"
harness = false
