[package]
name = "rsync-transport"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Transport helpers for the Rust rsync implementation"

[dependencies]
rsync-protocol = { path = "../protocol" }

[dev-dependencies]
proptest = "1.4"
